output/20--deployment--todo.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: todo-app
    app.kubernetes.io/name: todo
    app.openshift.io/runtime: spring
  name: todo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: todo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: todo
        app.kubernetes.io/part-of: todo-app
    spec:
      containers:
        - env:
            - name: TZ
              valueFrom:
                configMapKeyRef:
                  key: timezone
                  name: todo-configmap-7g9d8dd425
            - name: JAVA_OPTIONS
              valueFrom:
                configMapKeyRef:
                  key: java_options
                  name: todo-configmap-7g9d8dd425
            - name: SPRING_ACTIVE_PROFILES
              valueFrom:
                configMapKeyRef:
                  key: spring_active_profiles
                  name: todo-configmap-7g9d8dd425
            - name: DATASOURCE_URL
              valueFrom:
                configMapKeyRef:
                  key: datasource_url
                  name: todo-configmap-7g9d8dd425
            - name: DATASOURCE_DRIVER_CLASSNAME
              valueFrom:
                configMapKeyRef:
                  key: datasource_driver_classname
                  name: todo-configmap-7g9d8dd425
            - name: DATASOURCE_USERNAME
              valueFrom:
                secretKeyRef:
                  key: database-user
                  name: todo-database
            - name: DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-password
                  name: todo-database
          image: quay.io/rh_rh/todo:a7d0b835bc
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              host: ""
              path: /management/info
              port: 8080
              scheme: HTTP
          name: todo
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              host: ""
              path: /management/info
              port: 8080
              scheme: HTTP
            successThreshold: 1
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 200m
              memory: 512Mi
          securityContext:
            runAsNonRoot: true
          startupProbe:
            failureThreshold: 5
            httpGet:
              host: ""
              path: /management/info
              port: 8080
              scheme: HTTP
            successThreshold: 1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: todo-app
      serviceAccountName: todo-app
      terminationGracePeriodSeconds: 30
