output/30--service--todo-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: todo-app
    app.kubernetes.io/name: todo
  name: todo-svc
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: todo-svc
