output/99--route--todo-rt.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/instance: todo-app
    app.kubernetes.io/name: todo
  name: todo-rt
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: todo-svc
    weight: 100
  wildcardPolicy: None
